CHANGELOG RoundCube Webmail
---------------------------

2008/11/03 (alec)
----------
- Add warning when switching editor mode from html to plain (#1485488)
- Make identities list scrollable (#1485538)

2008/10/29 (alec)
----------
- Fix problem with numeric folder names (#1485527)
- Added BYE response simple support to prevent from endless loops in imap.inc (#1483956)

2008/10/27 (alec)
----------
- Fix unread message unintentionally marked as read if read_when_deleted=true (#1485409)
- Remove port number from SERVER_NAME in smtp_helo_host (#1485518)

2008/10/25 (alec)
----------
- Don't send disposition notification receipts for messages marked as 'read' (#1485523)
- Added 'keep_alive' and 'min_keep_alive' options (#1485360)

2008/10/24 (alec)
----------
- Added option 'identities_level', removed 'multiple_identities'
- Allow deleting identities when multiple_identities=false (#1485435)

2008/10/22 (alec)
----------
- Added option focus_on_new_message (#1485374)

2008/10/18 (alec)
----------
- Fix html2text class autoloading on Windows (#1485505)
- Fix html signature formatting when identity save error occured (#1485426)

2008/10/15 (alec)
----------
- Add feedback and set busy when moving folder (#1485497)

2008/10/10 (alec)
----------
- Fix 'Empty' link visibility for some languages e.g. Slovak (#1485489)
- Fix messages count bar overlapping (#1485270)
- Fix adding signature in drafts compose mode (#1485484)

2008/10/09 (alec)
----------
- Fix iil_C_Sort() to support very long and/or divided responses (#1485283)
- Fix matching case sensitivity when setting identity on reply (#1485480)
- Prefer default identity on reply

2008/10/08 (alec)
----------
- Fix imap searching on ISMail server (#1485466)
- Add css class for flagged messages (#1485464)

2008/10/07 (alec)
----------
- Write username instead of id in sendmail log (#1485477)
- Fix htmlspecialchars() use for PHP version < 5.2.3 (#1485475)